Fix build.xml: - Rename visualeditor.css to defaults.css in order to satisfy compc - Add additional compile-config.xml which including to build assets and defaults.css file
WARNING: In case of Air/Web type of build line with style import in VisualEditor.mxml need to be commented out
(reference prominic/Moonshine-IDE#4)

--- a/src/VisualEditorWeb.mxml
+++ b/src/VisualEditorWeb.mxml
@@ -6,5 +6,5 @@
 
 	<view:VisualEditor top="0" right="0" bottom="0" left="0"/>
 
-	<fx:Style source="visualeditor.css"/>
+	<fx:Style source="defaults.css"/>
 </s:Application>
