--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -2,7 +2,8 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
 	xmlns:view="view.*">
-
+	<!--This style import is only for SWC ant compilation - remove it in case of app compilation -->
+	<fx:Style source="defaults.css"/>
 	<s:BorderContainer id="toolbar" top="0" left="0" right="0">
 		<s:layout>
 			<s:HorizontalLayout verticalAlign="middle"/>
