Add new component "Container" - It allows mockup containers available in Flex (Group, HGroup etc.)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -46,5 +46,8 @@
 		<data:ComponentListItem name="Window">
 			<data:type>view.surfaceComponents.Window</data:type>
 		</data:ComponentListItem>
+		<data:ComponentListItem name="Container">
+			<data:type>view.surfaceComponents.Container</data:type>
+		</data:ComponentListItem>
 	</s:ArrayList>
 </s:List>
