Change _hasChanged after drop component instead of adding  (reference prominic/Moonshine-IDE#65)

--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -61,7 +61,7 @@
 				if (!tempFileMoonshine.exists)
 				{
 					var xml:XML = this.editingSurface.toXML();
-					var tempFileStreamMoonshine = new FileStream();
+					var tempFileStreamMoonshine:FileStream = new FileStream();
 					tempFileStreamMoonshine.open(tempFileMoonshine, FileMode.WRITE);
 					tempFileStreamMoonshine.writeUTFBytes(xml.toXMLString());
 					tempFileStreamMoonshine.close();
