Introduce mechanism which allow notify about properties change in each component (reference prominic/Moonshine-IDE#67)

--- a/src/view/PropertyEditorContainer.mxml
+++ b/src/view/PropertyEditorContainer.mxml
@@ -5,6 +5,7 @@
 
 	<fx:Metadata>
 		[Event(name="change",type="flash.events.Event")]
+		[Event(name="propertyEditorChanged",type="flash.events.Event")]
 	</fx:Metadata>
 
 	<s:states>
