Notify about change if some item has been added to DropDownList, translate added element to MXML (reference prominic/Moonshine-IDE#67)

--- a/src/view/propertyEditors/forms/DataProviderItemRenderer.mxml
+++ b/src/view/propertyEditors/forms/DataProviderItemRenderer.mxml
@@ -35,7 +35,7 @@
 
 		private function commitChanges():void
 		{
-			if(!this.editing)
+			if(!this.editing || !this.data)
 			{
 				//not editing, so nothing to commit!
 				return;
