Change name of the component "Windot" to "Panel" to reflect real type of the component (reference prominic/Moonshine-IDE#98)

--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -40,7 +40,7 @@
 		<data:ComponentListItem name="Tree">
 			<data:type>view.surfaceComponents.Tree</data:type>
 		</data:ComponentListItem>
-		<data:ComponentListItem name="Window">
+		<data:ComponentListItem name="Panel">
 			<data:type>view.surfaceComponents.Window</data:type>
 		</data:ComponentListItem>
 		<data:ComponentListItem name="Container">
