Introduce component MainApplication which is non deletable (INonDeletableSurfaceComponent) component represent WindowedApplication (reference prominic/Moonshine-IDE#98)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -156,6 +156,8 @@
 		 */
 		public function deleteItem(item:ISurfaceComponent):void
 		{
+			if (item is INonDeletableSurfaceComponent) return;
+			
 			var container:IVisualElementContainer = IVisualElementContainer(item.parent);
 			container.removeElement(IVisualElement(item));
 
