--- a/src/view/propertyEditors/forms/BasicsForm.mxml
+++ b/src/view/propertyEditors/forms/BasicsForm.mxml
@@ -12,26 +12,26 @@
 		<s:TextInput id="xInput" width="100%"
 			text="{selectedComponent.x}"
 			keyDown="xInput_keyDownHandler(event)"
-			focusOut="commitX()" enter="commitX()"/>
+			focusOut="commitX()" enter="commitX()" tabIndex="0"/>
 	</s:FormItem>
 	<s:FormItem label="Y">
 		<s:TextInput id="yInput" width="100%"
 			text="{selectedComponent.y}"
 			keyDown="yInput_keyDownHandler(event)"
-			focusOut="commitY()" enter="commitY()"/>
+			focusOut="commitY()" enter="commitY()" tabIndex="1"/>
 	</s:FormItem>
 	<s:FormHeading label="Size"/>
 	<s:FormItem label="Width">
 		<s:TextInput id="widthInput" width="100%"
 			text="{selectedComponentComputedWidth}"
 			keyDown="widthInput_keyDownHandler(event)"
-			focusOut="commitWidth()" enter="commitWidth()"/>
+			focusOut="commitWidth()" enter="commitWidth()" tabIndex="2"/>
 	</s:FormItem>
 	<s:FormItem label="Height">
 		<s:TextInput id="heightInput" width="100%"
 			text="{selectedComponentComputedHeight}"
 			keyDown="heightInput_keyDownHandler(event)"
-			focusOut="commitHeight()" enter="commitHeight()"/>
+			focusOut="commitHeight()" enter="commitHeight()" tabIndex="3"/>
 	</s:FormItem>
 	<s:FormHeading label="Layering"/>
 	<s:Group>
